[gd_scene load_steps=4 format=3 uid="uid://cq0gritqr5g5r"]

[ext_resource type="Script" uid="uid://bgqhsshlanh17" path="res://BattleSystem.gd" id="1_u8cu3"]
[ext_resource type="PackedScene" uid="uid://b720kpxgs12cd" path="res://Cards/Card.tscn" id="2_yh5fh"]
[ext_resource type="Script" uid="uid://ct2kh0ubla0gm" path="res://HandManager.gd" id="3_1046u"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_u8cu3")
player_hand_path = NodePath("PlayerHand")
player_field_path = NodePath("PlayerField")
enemy_field_path = NodePath("EnemyField")
card_scene = ExtResource("2_yh5fh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInfo" type="VBoxContainer" parent="UI/UIRoot"]
layout_mode = 0
offset_left = 15.0
offset_top = 262.0
offset_right = 125.0
offset_bottom = 344.0

[node name="ManaLabel" type="Label" parent="UI/UIRoot/PlayerInfo"]
layout_mode = 2
text = "3"

[node name="DeckCountLabel" type="Label" parent="UI/UIRoot/PlayerInfo"]
layout_mode = 2
text = "10"

[node name="EndTurnButton" type="Button" parent="UI/UIRoot/PlayerInfo"]
layout_mode = 2
text = "End Turn"

[node name="EnemyInfo" type="VBoxContainer" parent="UI/UIRoot"]
layout_mode = 0
offset_left = 514.0
offset_top = 16.0
offset_right = 624.0
offset_bottom = 64.0

[node name="EnemyManaLabel" type="Label" parent="UI/UIRoot/EnemyInfo"]
layout_mode = 2
text = "3"
horizontal_alignment = 2

[node name="EnemyDeckCountLabel" type="Label" parent="UI/UIRoot/EnemyInfo"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="StartGameButton" type="Button" parent="UI/UIRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -15.0
offset_right = 66.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="PlayerField" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -333.0
offset_right = -392.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 0

[node name="EnemyField" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 321.0
offset_top = -332.0
offset_right = -108.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayerHand" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 168.0
offset_top = 232.0
offset_right = 633.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_1046u")
card_scene = ExtResource("2_yh5fh")
cards_container_path = NodePath("CardsContainer")

[node name="CardsContainer" type="Control" parent="PlayerHand"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="UI/UIRoot/PlayerInfo/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
